# PoPS

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  .markdownlint-cli2.jsonc  BUILD_PROFILING.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  EXEMPLE_SPEC_FINALE_15_MOMENTS_HYQMOM.py  README.md  SECURITY.md  environment.yml  pixi.toml  pyproject.toml  pyrightconfig.json  todo.md  tsan-suppressions.txt
benchmarks/: CMakeLists.txt  README.md  manifest.toml
benchmarks/romeo/: job_armgpu.sbatch  submit_armgpu.sh
benchmarks/src/: arith_halo_case.cpp  benchmark_support.cpp  main.cpp  tensor_krylov_case.cpp
docs/validation/: CMakeLists.txt  GH200_HYQMOM15.md  HEADER_PROVENANCE.md  diocotron_gpu.cpp  diocotron_mpi.sbatch  make_brick_and_ic.py  mpi181.sbatch  parity181.sbatch
examples/: CMakeLists.txt  diocotron_amr.cpp  diocotron_amr3.cpp  diocotron_column_amr.cpp
examples/final/: EXEMPLE_SPEC_FINALE_15_MOMENTS_HYQMOM.py  EXEMPLE_SPEC_FINALE_ADVECTION_IMEX_AMR.py  EXEMPLE_SPEC_FINALE_ADVECTION_SCALAIRE_COMPLET.py  EXEMPLE_SPEC_FINALE_MULTIPHYSIQUE_CORE.py  README.md
examples/gpu/: CMakeLists.txt  advect_kokkos.cpp  diocotron_amr_kokkos.cpp
examples/operator_modules/: predictor_corrector_operator_first.py
examples/spec3/: board_euler_poisson_lorentz.py  board_time_predictor_corrector.py  board_vs_operator_ir_equivalence.py  compile_library_so.py  custom_richardson_solver.py  external_cpp_riemann.py  hllc_capabilities_euler.py  invariant_generic.py  manual_vs_lib_predictor_corrector.py  multispecies_three_fluids.py  operator_first_same_problem.py  rate_bundle_collisions.py  scheduled_fields_subcycled_transport.py  stage_state_set_field_solve.py
examples/spec4/: adc_cases_style_driver.py  custom_moment_model.py  lib_time_program.py  manual_time_program.py
examples/spec_final/: amr_poisson_lorentz.py  custom_moment_model.py  lib_time_predictor_corrector_poisson_lorentz.py  manual_board_predictor_corrector_poisson_lorentz.py  matrix_free_krylov_bicgstab.py  provided_hyqmom15_model.py
examples/time_programs/: _module_models.py  adams_bashforth2_program.py  condensed_schur_program.py  divergence_solve.py  forward_euler_program.py  matrix_free_solve.py  predictor_corrector_poisson_lorentz.py  rk4_program.py  ssprk2_program.py  ssprk3_program.py  strang_program.py
python/: CMakeLists.txt  amr_block_compressible.cpp  amr_block_compressible_hll.cpp  amr_block_compressible_hllc.cpp  amr_block_compressible_roe.cpp  amr_block_compressible_rusanov.cpp  amr_block_isothermal.cpp  amr_compiled_compressible.cpp  amr_compiled_compressible_hll.cpp  amr_compiled_compressible_hllc.cpp  amr_compiled_compressible_roe.cpp  amr_compiled_compressible_rusanov.cpp  amr_compiled_isothermal.cpp  amr_system.cpp  bindings.cpp  init_amr.cpp  init_core.cpp  init_system.cpp  system.cpp  system_isothermal_hll.cpp  system_isothermal_rusanov.cpp  test_bindings.py  two_fluid_ap_solver.cpp
python/adc/: __init__.py  dsl.py  lib.py  math.py  model.py  moments.py  physics.py  time.py
python/bindings/: seam_combinations.cmake
python/pops/: __init__.py  _api.py  _bootstrap.py  _capabilities.py  _capabilities_common.py  _capabilities_inspect.py  _capabilities_report.py  _dense_spectral.py  _descriptor_protocol.py  _frozen_data.py  _generated_component_interfaces.py  _generated_release_contract.py  _geometry_contracts.py  _inspect.py  _manifest_immutability.py  _manifest_protocol.py  _native_collectives.py  _native_facts.py  _paraview_python_bootstrap.py  _platform_contracts.py  _platform_manifest_io.py  _pops.pyi  _report.py  _version.py  case.py  descriptors.py  descriptors_report.py  interfaces.py  library.py  math.py  moments.py  native_components.py  problem.py  provenance.py  release.py  runtime_environment.py
python/tests/: _module_models.py  test_amr_checkpoint.py  test_amr_clock.py  test_amr_compiled_positivity_floor.py  test_amr_conservative_state.py  test_amr_install_program.py  test_amr_multiblock.py  test_amr_named_field.py  test_amr_newton_full.py  test_amr_patch_boxes.py  test_amr_positivity_floor.py  test_amr_production_stride_reject.py  test_amr_program_parity.py  test_amr_regrid_variable.py  test_amr_runtime_inspect.py  test_amr_schur_via_system.py  test_amr_ssprk3.py  test_amr_weno5_hllc_roe.py  test_aot_optflags.py  test_aux_halo.py  test_aux_named.py  test_backend_auto.py  test_backend_platform.py  test_bind_adapters.py  test_bindings.py  test_block_names_dynamic.py  test_board_field_problem.py  test_board_multispecies.py  test_brick_catalog.py  test_cache_codegen.py  test_cache_key_routes.py  test_capabilities.py  test_capacity_limits.py  test_case_multiblock_amr.py  test_case_multiblock_uniform.py  test_check_model.py  test_check_model_partition.py  test_codegen_dead_prims.py  test_codegen_role_normalization.py  test_compile_cache_backend.py  (+211 more)
src/: CMakeLists.txt  two_fluid_ap_solver.cpp
tests/: CMakeLists.txt  __init__.py  coverage_exceptions.toml  test_adaptive_multirate.cpp  test_advance_amr.cpp  test_amr_aux_bz.cpp  test_amr_compiled_model.cpp  test_amr_condensed_schur_source_stepper.cpp  test_amr_coupled_source_role_strict.cpp  test_amr_coupler.cpp  test_amr_coupler_mp.cpp  test_amr_diagnostics.cpp  test_amr_diffusion.cpp  test_amr_hierarchy.cpp  test_amr_imex_native.cpp  test_amr_multiblock_compiled.cpp  test_amr_multiblock_coupled_source.cpp  test_amr_multiblock_imex.cpp  test_amr_multiblock_regrid_union.cpp  test_amr_multiblock_substeps.cpp  test_amr_multilevel_mf.cpp  test_amr_multilevel_multipatch.cpp  test_amr_multipatch.cpp  test_amr_named_field.cpp  test_amr_reflux.cpp  test_amr_spatial_parity.cpp  test_amr_system_bz_multibox.cpp  test_amr_system_contract.cpp  test_amr_system_coupler.cpp  test_amr_system_twoblock.cpp  test_amr_weno5_native.cpp  test_anisotropic_epsilon.cpp  test_ap_limit.cpp  test_assembler_driver.cpp  test_aux_coupler_bz.cpp  test_aux_extra.cpp  test_aux_halo.cpp  test_aux_runtime_bz.cpp  test_aux_system_bz.cpp  test_aux_te.cpp  (+86 more)
tests/architecture/: test_brick_catalog_parity.py  test_ci_impacted_selection.py  (+17 more)
(+2330 files in other folders)
